<resources>
    <string name="app_name">Enactus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_des">“It’s not only about ideas.
It’s about making ideas happen.”
Enactus believes in investing in students who take entrepreneurial action for others and create a more suitable world for us all.
It is all about social work for underprivileged people and at the same time creating social entrepreneurship.
It puts  forth the leaders of tomorrow who with their altruistic values work towards making the world a better place both for the privileged as well as the underprivileged .
We at Enactus Shivaji  carry forward the same values and contribute our bit towards the society. This we have made possible through a host of different projects and initiatives. One such significant one is project SANA .
We truly believe that the greatest good one can do for another is not just share your riches , but to reveal to him his own by imparting knowledge and skills that were once far fetched .</string>
    <string name="trackotheract">Track Other Activities </string>
    <string name="currentdate">Today date</string>
    <string name="sexdrive">Sex Drive:</string>
    <string name="Backpain">Backpain</string>
    <string name="Title">Title</string>
    <string name="Sex">Sex</string>
    <string name="Description">Description</string>
    <string name="SignUp">Sign Up</string>
    <string name="Signintoyouraccount">Sign in to your account</string>
    <string name="Login">Log in</string>
    <string name="Forgotpassword">Forgot password?</string>
    <string name="resetlink">Send reset link</string>
    <string name="Termandcondition">By Signing in you agree with the Term and condition </string>
    <string name="SleepTime">Sleep Time</string>
    <string name="SelectTime">Select Time</string>
    <string name="NEXT">NEXT</string>
    <string name="appdefine">An app made especially for PCOD patients, which keep track of all their activities</string>
    About PCOD
    <string name="AboutPCOD">About PCOD</string>
    <string name="JayantDhingra">Jayant Dhingra</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
