<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginSignUp.LoginActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_login_to_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/SignUp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/chalu" />

        <TextView
            android:id="@+id/tv_signin_to_ur_acc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/Signintoyouraccount"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_border"
            android:includeFontPadding="false"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/Login"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/Forgotpassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp">-->

        <!--            <RelativeLayout-->
        <!--                android:layout_gravity="center_horizontal"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <Button-->
        <!--                    android:id="@+id/btn_facebook"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_alignParentStart="true"-->
        <!--                    android:layout_marginStart="40dp"-->
        <!--                    android:layout_marginTop="16dp"-->
        <!--                    android:layout_marginEnd="50dp"-->
        <!--                    android:background="@drawable/btn_border"-->
        <!--                    android:drawableStart="@drawable/facebook_logo"-->
        <!--                    android:drawablePadding="8dp"-->
        <!--                    android:elevation="2dp"-->
        <!--                    android:paddingStart="16dp"-->
        <!--                    android:paddingEnd="16dp"-->
        <!--                    android:text="Facebook" />-->

        <Button
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_border"
            android:drawableStart="@drawable/google_logo"
            android:drawablePadding="8dp"
            android:elevation="2dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Google    " />

        <!--            </RelativeLayout>-->


        <!--        </LinearLayout>-->

        <Button
            android:id="@+id/btn_forgot_password_reset_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_border"
            android:includeFontPadding="false"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/resetlink"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text544"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Termandcondition"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>